--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "cognizant-server.js",
   "dependencies": {
     "aws-sdk": "^2.1.20",
+    "bunyan": "^1.3.5",
     "restify": "^3.0.1"
   },
   "devDependencies": {},
